--- a/BudgetAPI/appsettings.json
+++ b/BudgetAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BreweryDatabase": "Server=(localdb)\\mssqllocaldb;Database=Budget;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BudgetAPIContext": "Server=(localdb)\\mssqllocaldb;Database=BudgetAPIContext-1633b49b-23cd-4004-8756-70638f791c16;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
